objects/tffa__WebhookConfiguration__mdt.object
<CustomObject>
    <description>Configure webhook handlers for different callbacks to paths</description>
    <fields>
        <fullName>tffa__Description__c</fullName>
        <description>Describe the purpose of the webhook</description>
        <label>Description</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>tffa__Enabled__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Whether the webhook is enabled</description>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__Path__c</fullName>
        <description>The relative path url for the webhook</description>
        <label>Path</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>tffa__WebhookHandlerClass__c</fullName>
        <description>The name of the apex class which extends AbstractWebhookHandler</description>
        <label>Webhook Handler Class</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Webhook Configuration</label>
    <listViews>
        <fullName>tffa__Webhook_Configuration</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>tffa__Description__c</columns>
        <columns>tffa__Path__c</columns>
        <columns>tffa__WebhookHandlerClass__c</columns>
        <columns>tffa__Enabled__c</columns>
        <filterScope>Everything</filterScope>
        <label>Webhook Configuration</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>Webhook Configurations</pluralLabel>
</CustomObject>